--- a/src/i18n/locales/cn.json
+++ b/src/i18n/locales/cn.json
@@ -78,10 +78,6 @@
       "done": "订单已重置。"
     }
   },
-  "about": {
-    "title": "关于我们",
-    "story": "我们以平静、清晰和用心烘焙咖啡。从农场到杯中，为您带来温暖而极简的体验 —— 设计简约，但味道深邃。"
-  },
   "common": {
     "back": "返回",
     "next" : "下一步",
@@ -167,5 +163,80 @@
     "decrease": "减少",
     "increase": "增加",
     "quantity": "数量"
+  },
+  "about": {
+    "title": "关于我们",
+    "contact_label": "联系我们",
+    "contact_href": "/contact",
+    "tagline": "传承咖啡",
+    "slogan_primary": "由柬埔寨人，为柬埔寨人——并走向世界。",
+    "slogans_alt": [
+      "由柬埔寨人，为柬埔寨人——并走向世界。",
+      "以柬埔寨为傲——从我们的烘焙坊走向世界。",
+      "柬埔寨匠心打造，全球共同品饮。",
+      "从柬埔寨走向世界。"
+    ],
+    "story": "我们延续祖父的传承——为每一位柬埔寨人带来亲民价的高品质咖啡。",
+    "mission": "传承我们的文化遗产，支持本地产品，并以亲民价格提供高品质咖啡，让所有柬埔寨人都喝得起。",
+    "heritage": {
+      "title": "传承",
+      "body": "我们的故事始于祖父用朴素的火候烘焙咖啡。他的细心与耐心教会我们尊重咖啡豆——不走捷径，只追求甜感与清澈。如今，我们以干净的小批量烘焙延续他的精神，并在每一袋上清晰标注烘焙日期。",
+      "note": "祖父：慢一点——咖啡豆会告诉你它何时准备好了。"
+    },
+    "core": [
+      "公平价格，品质不妥协",
+      "品质可与领先海外品牌比肩",
+      "本地自豪——柬埔寨制造",
+      "新鲜直达——按单烘焙与快速物流"
+    ],
+    "values": [
+      { "title": "新鲜为先", "body": "按单烘焙与快速配送；多数产品在 3–4 天内上架。" },
+      { "title": "友好农户", "body": "优先采购新季豆，并为合作伙伴提供公平回报。" },
+      { "title": "精益库存", "body": "常备约两个月生豆，保持最佳风味与周转。" },
+      { "title": "透明日期", "body": "每袋标注烘焙日期——清清楚楚看得到。" },
+      { "title": "本地与自豪", "body": "在柬埔寨烘焙与包装——支持本地就业。" },
+      { "title": "真正价值", "body": "优质风味与亲民价格并存——不做过度营销溢价。" }
+    ],
+    "roast": {
+      "title": "我们的烘焙",
+      "intro": "我们以干净的干式烘焙，调校每一批的甜感、清晰度与醇厚感。",
+      "highlights": [
+        "干式烘焙——保留关键油脂；不使用淋水降温。",
+        "标志性收尾——短暂“锁烟”，带来更深层香气。",
+        "配方与单品皆保持稳定的风味曲线。"
+      ]
+    },
+    "process": [
+      { "title": "接单", "body": "根据订单安排烘焙——不让成品长期囤库。" },
+      { "title": "小批量烘焙", "body": "为平衡与甜感精准调校曲线。" },
+      { "title": "包装与封口", "body": "包装上清晰标注烘焙日期，信息透明。" },
+      { "title": "直达上架", "body": "多数门店 3–4 天即上架——从设计上保证新鲜。" }
+    ],
+    "stats": { "years": 23, "team": 12, "days_to_shelf": 4, "inventory": 2 },
+    "gallery_title": "画廊",
+    "gallery_alt": "烘焙厂与咖啡馆画廊图片",
+    "gallery_open": "打开图片",
+    "faq": [
+      { "q": "你们的咖啡有多新鲜？", "a": "我们按单烘焙。大多数产品在烘焙后 3–4 天内上架。" },
+      { "q": "提供批发吗？", "a": "提供。咖啡馆与零售商可联系获取每周烘焙档期与报价。" },
+      { "q": "我该选哪种研磨度？", "a": "我们可在结账时代研磨，但家用磨豆机（锥刀/burr）能获得最佳口感。" }
+    ],
+    "labels": {
+      "mission": "使命",
+      "core": "核心",
+      "values": "价值观",
+      "roast": "烘焙",
+      "process": "流程",
+      "gallery": "画廊",
+      "faq": "常见问题",
+      "sourcing": "原料来源",
+      "heritage": "烘焙年数",
+      "team": "团队人数",
+      "freshness": "上架天数",
+      "inventory": "生豆月数",
+      "heritage_block": "我们的传承"
+    },
+    "cta_sr_hint": "前往联系页面",
+    "logo_alt": "柬埔寨咖啡标志"
   }
 }
