--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -78,10 +78,6 @@
       "done": "បានកំណត់ការបញ្ជាទិញឡើងវិញ។"
     }
   },
-  "about": {
-    "title": "អំពី​ពួក​យើង",
-    "story": "យើង​ឆុងកាហ្វេ​ដោយ​ភាពស្ងប់ស្ងាត់ ភាពច្បាស់លាស់ និង​ការ​ថែរក្សា។ ពី​កសិដ្ឋាន​ដល់​កែវ យើង​នាំមក​នូវបទពិសោធន៍កក់ក្តៅ និង​សាមញ្ញ — ការរចនាសាមញ្ញ ប៉ុន្តែរសជាតិជ្រៅជ្រះ។"
-  },
   "common": {
     "back": "ថយក្រោយ",
     "next": "បន្ទាប់",
@@ -165,5 +161,80 @@
     "decrease": "បន្ថយ",
     "increase": "បន្ថែម",
     "quantity": "បរិមាណ"
+  },
+  "about": {
+    "title": "អំពីពួកយើង",
+    "contact_label": "ទាក់ទងមកពួកយើង",
+    "contact_href": "/contact",
+    "tagline": "កាហ្វេបមរតក",
+    "slogan_primary": "ដោយជនជាតិខ្មែរ សម្រាប់ជនជាតិខ្មែរ — និងពិភពលោក។",
+    "slogans_alt": [
+      "ដោយជនជាតិខ្មែរ សម្រាប់ជនជាតិខ្មែរ — និងពិភពលោក។",
+      "មានមោទនភាពថាជាជនជាតិខ្មែរ — ពីរោងចក្រឆុងរហូតដល់ពិភពលោក។",
+      "បង្កើតដោយជនជាតិខ្មែរ ប្រកបដោយការកោតសរសើរទូទាំងពិភពលោក។",
+      "ខ្មែរទៅកាន់ពិភពលោក។"
+    ],
+    "story": "យើងគោរពមរតករបស់តា—ចែករំលែកកាហ្វេគុណភាពខ្ពស់តម្លៃសមរម្យឱ្យជនជាតិខ្មែរទាំងអស់។",
+    "mission": "គោរពបេតិកភណ្ឌ ឧបត្ថម្ភផលិតផលក្នុងស្រុក និងផ្តល់កាហ្វេគុណភាពខ្ពស់តម្លៃសមរម្យសម្រាប់ជនជាតិខ្មែរទាំងអស់។",
+    "heritage": {
+      "title": "មរតក",
+      "body": "រឿងរ៉ាវរបស់យើងចាប់ផ្តើមពីតាឆុងកាហ្វេដោយភ្លើងសាមញ្ញ។ ដៃប្រុងប្រយ័ត្ន និងភាពអត់ធ្មត់របស់គាត់បានបង្រៀនឱ្យយើងគោរពមុទ្ធកាហ្វេ — ដើម្បីនាំមកនូវផ្អែម និងច្បាស់លាស់ដោយគ្មានផ្លូវកាត់។ សព្វថ្ងៃ យើងបន្តវត្តមានរបស់គាត់ជាមួយការឆុងបាច់តូចៗ ស្អាត និងបោះថ្ងៃឆុងជាក់លាក់លើថង់រាល់មួយ។",
+      "note": "តា៖ កាហ្វេល្អអាចទទួលបានតាមពេលវេលា"
+    },
+    "core": [
+      "តម្លៃសមរម្យ ដោយមិនបោះបង់គុណភាព",
+      "គុណភាពប្រៀបបាននឹងម៉ាកបរទេសដឹកនាំ",
+      "មានមោទនភាពក្នុងស្រុក — Made in Cambodia",
+      "សំបុត្រឆុងតាមការបញ្ជា ស្រួលដឹកជញ្ជូន ទាន់សម័យ"
+    ],
+    "values": [
+      { "title": "ភាពស្រស់ជាមុន", "body": "ឆុងតាមការបញ្ជា ផ្លូវដឹកលឿន; ថង់ភាគច្រើនដល់ហាងក្នុងរយៈ 3–4 ថ្ងៃ។" },
+      { "title": "មិត្តភាពជាមួយកសិករ", "body": "ទិញពូជរដូវថ្មី និងឲ្យតម្លៃយ៉ាងត្រឹមត្រូវដល់ដៃគូតាមប្រភពផ្សេងៗ។" },
+      { "title": "ស្តុកស្រួលស្រាល", "body": "ទុកកាហ្វេខៀវប្រមាណពីរខែ ដើម្បីរក្សារសជាតិល្អ និងបង្វិលលឿន។" },
+      { "title": "កាលបរិច្ឆេទថ្លែងត្រង់", "body": "បោះថ្ងៃឆុងលើរាល់ថង់ — អ្នកដឹងជាក់ថាឆុងពេលណា។" },
+      { "title": "មូលដ្ឋានក្នុងស្រុក", "body": "ឆុង និងកញ្ចប់នៅកម្ពុជា — គាំទ្រការងារក្នុងស្រុក។" },
+      { "title": "តម្លៃពិតប្រាកដ", "body": "រសជាតិខ្ពស់តម្លៃសមរម្យ — គ្មានថ្លៃទីផ្សារកើនពេក។" }
+    ],
+    "roast": {
+      "title": "ការឆុងរបស់យើង",
+      "intro": "យើងលៃតម្រូវរាល់បាច់ឱ្យផ្អែម ច្បាស់ និងមានខ្លាញ់ ដោយប្រើវិធីឆុងស្ងួតស្អាត។",
+      "highlights": [
+        "ឆុងស្ងួត — រក្សាទុកប្រេងសំខាន់ៗ; គ្មានទឹកត្រជាក់បញ្ចប់។",
+        "បិទផ្សែងខ្លីៗពេលចុង — ដើម្បីក្លិនក្រអូបជ្រៅជាងមុន។",
+        "រៀបចំរូបមន្តឆុងឱ្យមានស្ថេរភាព ទាំងប្លង់ និងប្រភពតែមួយ។"
+      ]
+    },
+    "process": [
+      { "title": "ទទួលការបញ្ជា", "body": "កំណត់ពេលឆុងជាក់លាក់ — គ្មានថង់គេងក្នុងឃ្លាំង។" },
+      { "title": "ឆុងបាច់តូច", "body": "លៃតម្រូវឱ្យមានតុល្យភាព និងផ្អែមភាពល្អ។" },
+      { "title": "កញ្ចប់ និងបិត", "body": "បោះថ្ងៃឆុងលើកញ្ចប់ ដើម្បីធ្វើឱ្យថ្លែងត្រង់។" },
+      { "title": "ដល់ហាងដោយផ្ទាល់", "body": "3–4 ថ្ងៃដល់ហាងភាគច្រើន — ស្រស់តាមរចនា។" }
+    ],
+    "stats": { "years": 23, "team": 12, "days_to_shelf": 4, "inventory": 2 },
+    "gallery_title": "វិចិត្រសាល",
+    "gallery_alt": "រូបភាពរោងឆុង និងកាហ្វេ",
+    "gallery_open": "បើករូបភាព",
+    "faq": [
+      { "q": "កាហ្វេស្រស់ប៉ុណ្ណា?", "a": "យើងឆុងតាមការបញ្ជា។ ថង់ភាគច្រើនដល់ហាងក្នុង 3–4 ថ្ងៃក្រោយថ្ងៃឆុង។" },
+      { "q": "មានលក់ដុំទេ?", "a": "មាន។ កាហ្វេ និងហាងលក់ស្រែអាចទាក់ទងសុំកាលវិភាគឆុងប្រចាំសប្ដាហ៍ និងតម្លៃ។" },
+      { "q": "គួរជ្រើសទំហំកិនណា?", "a": "អាចកិនពេលទិញបាន ប៉ុន្តែកិនដោយម៉ាស៊ីន burr នៅផ្ទះល្អជាង។" }
+    ],
+    "labels": {
+      "mission": "បេសកកម្ម",
+      "core": "ស្នូល",
+      "values": "តម្លៃ",
+      "roast": "ការលីង",
+      "process": "ដំណើរការ",
+      "gallery": "វិចិត្រសាល",
+      "faq": "សំណួរញឹកញាប់",
+      "sourcing": "ប្រភពទំនិញ",
+      "heritage": "ឆ្នាំការលីង",
+      "team": "ក្រុមការងារ",
+      "freshness": "ថ្ងៃដល់ហាង",
+      "inventory": "ខែស្តុកគ្រាប់ឆៅ",
+      "heritage_block": "បេតិកភណ្ឌរបស់យើង"
+    },
+    "cta_sr_hint": "ទៅទំព័រទាក់ទង",
+    "logo_alt": "រូបសញ្ញាកាហ្វេខ្មែរ"
   }
 }
