--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -87,7 +87,9 @@
     "added": "បានបន្ថែមទៅក្នុងរទេះទំនិញ!",
     "confirm": "បាទ/ចាស",
     "cancel": "បោះបង់",
-    "reset": "ចាប់ផ្តើមការបញ្ជាទិញម្ដងទៀត?"
+    "reset": "ចាប់ផ្តើមការបញ្ជាទិញម្ដងទៀត?",
+    "tapToSelect": "បញ្ចូលជម្រើស",
+    "close": "បិទ"
   },
   "payment": {
     "cod": "បង់លុយពេលដឹកដល់ (COD)",
@@ -228,7 +230,7 @@
       "gallery": "វិចិត្រសាល",
       "faq": "សំណួរញឹកញាប់",
       "sourcing": "ប្រភពទំនិញ",
-      "heritage": "ឆ្នាំការលីង",
+      "heritage": "មរតក",
       "team": "ក្រុមការងារ",
       "freshness": "ថ្ងៃដល់ហាង",
       "inventory": "ខែស្តុកគ្រាប់ឆៅ",
@@ -236,5 +238,8 @@
     },
     "cta_sr_hint": "ទៅទំព័រទាក់ទង",
     "logo_alt": "រូបសញ្ញាកាហ្វេខ្មែរ"
+  },
+  "units": {
+    "years_other": "{{count}} ឆ្នាំ"
   }
 }
