--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -137,7 +137,7 @@
     "name_short": "ឈ្មោះខ្លីពេក។",
     "email_invalid": "សូមបញ្ចូលអ៊ីមែលត្រឹមត្រូវ។",
     "phone_required": "សូមបំពេញលេខទូរស័ព្ទរបស់អ្នក។",
-    "phone_invalid": "ប្រើលេខ 6–20 ខ្ទង់ (អនុញ្ញាតលេខ ដកឃ្លា + ឬ -)។"
+    "phone_invalid": "ប្រើទម្រង់លេខទូរស័ព្ទជាតិកម្ពុជា (0XXXXXXXX ឬ 0XXXXXXXXX)៖ បញ្ចូលលេខ 9–10 ខ្ទង់ ចាប់ផ្តើមដោយ 0; មិនអនុញ្ញាត +855 ឬសញ្ញាផ្សេងៗ។"
   },
   "footer": {
     "facebook": "ហ្វេសប៊ុក",
