--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -71,6 +71,9 @@
     "name":"ឈ្មោះពេញ","email":"អ៊ីមែល","phone":"ទូរស័ព្ទ",
     "address":"អាសយដ្ឋាន","province":"ខេត្ត/ក្រុង","district":"ស្រុក/ខណ្ឌ","commune":"ឃុំ/សង្កាត់","village":"ភូមិ",
     "deliveryFee":"ថ្លៃដឹកជញ្ជូន","subtotal":"សរុបរង","total":"សរុប",
+    "street": "ផ្លូវ / ផ្ទះ / សញ្ញាសម្គាល់ក្បែរៗ",
+    "street_placeholder": "ផ្លូវ 123 ផ្ទះ 45 ក្បែរ​ផ្សារ",
+    "street_hint": "បន្ថែមទីតាំងសញ្ញាសម្គាល់ ឬ អាផាតមិនក្បែរៗ ដើម្បីងាយស្រួលដឹកជញ្ជូន។",
     "reset": {
       "title": "ចាប់ផ្តើមការបញ្ជាទិញម្ដងទៀត?",
       "hint": "វានឹងលុបព័ត៌មានទំនាក់ទាក់ អាសយដ្ឋាន ទំនិញ និងតម្លៃសរុប។",
@@ -118,7 +121,10 @@
     "proceed_payment": "បន្ត​ទៅការទូទាត់",
     "qty": "បរិមាណ",
     "each": "ក្នុងមួយ",
-    "item": "ឥវ៉ាន់"
+    "item": "ឥវ៉ាន់",
+    "remark": "កំណត់ចំណាំ",
+    "remark_placeholder": "ឧ. សូមហៅពេលមកដល់ ទុកនៅច្រក មិនដាក់ស្ករ ជាដើម។",
+    "remark_hint": "មិនចាំបាច់។ ព័ត៌មាននេះនឹងផ្ញើជាមួយការបញ្ជាទិញរបស់អ្នក។"
   },
   "address": {
     "search_placeholder": "ស្វែងរក…",
@@ -130,7 +136,25 @@
     "street": "ផ្លូវ/អាសយដ្ឋានលម្អិត",
     "street_placeholder": "ឧ. ផ្លូវ/ផ្ទះ/អាគារ/ជាន់",
     "selected": "បានជ្រើសរើស",
-    "required": "សូមបំពេញអាសយដ្ឋានរបស់អ្នកឲ្យបានពេញលេញ។"
+    "required": "សូមបំពេញអាសយដ្ឋានរបស់អ្នកឲ្យបានពេញលេញ។",
+    "choose_hint": "ជ្រើស ខេត្ត → ស្រុក/ខណ្ឌ → ឃុំ/សង្កាត់ → ភូមិ។",
+    "pinned": "បានបិទម្ជុល",
+    "preview_inexact": "ទីតាំងនេះប្រហែលជាមិនត្រឹមត្រូវ។ សូមដាក់ម្ជុលនៅអាសយដ្ឋានរបស់អ្នក។",
+    "confirm_pin": "ខ្ញុំបញ្ជាក់ថាម្ជុលផែនទីស្ថិតនៅកន្លែងដឹកជញ្ជូនពិតប្រាកដ",
+    "pin_unconfirmed": "ម្ជុលមិនទាន់បានបញ្ជាក់ ឬ ភាពត្រឹមត្រូវ GPS ទាប (±{{m}}ម)។ សូមអូសម្ជុល ឬ បញ្ជាក់។",
+    "locate_inexact": "យើងមិនអាចរកទីតាំងពិតប្រាកដរបស់អ្នកបានទេ។ សូមជ្រើសកន្លែងនៅលើផែនទី។",
+    "geo_https_required": "ត្រូវការប្រើ HTTPS (ឬ localhost) សម្រាប់ទីតាំង។ សូមបើកតាម https://",
+    "geo_not_supported": "កម្មវិធីរុករកនេះមិនគាំទ្រការរកទីតាំងទេ។",
+    "geo_permission_blocked": "បានទប់ស្កាត់សិទ្ធិតំណម្រូវទីតាំង។ សូមបើកនៅការកំណត់កម្មវិធីរុករក។",
+    "geo_permission_denied": "បានបដិសេធសិទ្ធិ។ សូមអនុញ្ញាតឱ្យចូលប្រើទីតាំង។",
+    "geo_position_unavailable": "មិនអាចរកទីតាំងបានទេ។ សូមសាកល្បងនៅខាងក្រៅផ្ទះ។",
+    "geo_timeout": "អស់ពេល។ សូមចុចម្ដងទៀត។",
+    "geo_failed": "មិនបានទទួលទីតាំងបច្ចុប្បន្ន។",
+    "locating": "កំពុងរកទីតាំង…",
+    "use_current": "ប្រើទីតាំងបច្ចុប្បន្ន",
+    "map_hide": "លាក់ផែនទី",
+    "map_pick": "ជ្រើសនៅផែនទី",
+    "map_locate": "រកទីតាំងលើផែនទី"
   },
   "errors": {
     "name_required": "សូមបំពេញឈ្មោះរបស់អ្នក។",
