--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -83,6 +83,9 @@
   },
   "common": {
     "back": "ថយក្រោយ",
+    "download": "ទាញយក",
+    "delete": "លុប",
+    "actions": "សកម្មភាព",
     "next": "បន្ទាប់",
     "addToCart": "បន្ថែមទៅកន្ត្រក",
     "remove": "ដកចេញ",
@@ -298,5 +301,29 @@
     "loading": "កំពុងផ្ទុក…",
     "clear": "លុបជម្រើស",
     "clear_hint": "(Del)"
+  },
+  "receipt": {
+    "title": "បង្កាន់ដៃ",
+    "missing": "មិនមានបង្កាន់ដៃទេ។",
+    "new_order": "ចាប់ផ្តើមការបញ្ជាទិញថ្មី",
+    "subtotal": "សរុបរង",
+    "delivery_fee": "ថ្លៃដឹកជញ្ជូន",
+    "total": "សរុប",
+    "status": "ស្ថានភាព"
+  },
+  "myorder": {
+    "title": "ការបញ្ជាទិញរបស់ខ្ញុំ",
+    "subtitle": "ការបញ្ជាទិញចុងក្រោយបំផុតរបស់អ្នក",
+    "empty_title": "អ្នកមិនទាន់មានការបញ្ជាទិញទេ",
+    "empty_desc": "ចាប់ផ្តើមការបញ្ជាទិញដំបូងរបស់អ្នកឥឡូវនេះ។",
+    "start_order": "ចាប់ផ្តើមបញ្ជាទិញ",
+    "order_no": "លេខបញ្ជាទិញ",
+    "date": "កាលបរិច្ឆេទ",
+    "items": "ឥវ៉ាន់",
+    "more": "ទំនិញទៀត",
+    "all": "បង្កាន់ដៃទាំងអស់",
+    "count": "បានរក្សាទុក",
+    "view_receipt": "មើលបង្កាន់ដៃ",
+    "download_pdf_tip": "ប្រើ “បោះពុម្ព → រក្សាទុកជា PDF”"
   }
 }
